# rustyknife

./: Cargo.toml  README.md
examples/: parse_from.rs  parse_smtp.rs
src/: headersection.rs  lib.rs  pymod.rs  rfc2047.rs  rfc2231.rs  rfc3461.rs  rfc5234.rs  rfc5321.rs  rfc5322.rs  types.rs  util.rs  xforward.rs
src/tests/: mod.rs  test_headersection.rs  test_rfc2231.rs  test_rfc5321.rs  test_rfc5322.rs
