[package]
name = "rustyknife"
description = "Fast, robust and safe email parsing library"
version = "0.2.12"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2018"
homepage = "https://github.com/zerospam/rustyknife"
repository = "https://github.com/zerospam/rustyknife.git"
license = "GPL-3.0+"
readme = "README.md"
categories = ["email", "parsing", "network-programming", "encoding"]
exclude = ["sphinx/source/*.so"]

[badges]
travis-ci = { repository = "zerospam/rustyknife" }
codecov = { repository = "zerospam/rustyknife", service = "github" }

[features]
default = ["quoted-string-rfc2047"]
quoted-string-rfc2047 = []
fuzz = ["afl"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
nom = "6.0"
base64 = "0.22.1"
idna = "1.0.3"
serde = { version = "1.0.219", features = ["derive"], optional=true }

afl = { version = "0.15.19", optional=true }
encoding_rs = "0.8.35"
charset = "0.1.5"

[[bin]]
name = "fuzz_mailbox"
required-features = ["fuzz"]

[profile.release]
panic = "abort"
